crates/biome_cli/tests/snapshots/main_commands_migrate/prettier_migrate_yml_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `.prettierrc`

```prettierrc
useTabs: true
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: Could not deserialize the Prettier configuration file
  


```

# Emitted Messages

```block
.prettierrc parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × String values must be double quoted.
  

```

```block
.prettierrc parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × End of file expected
  
  i Use an array for a sequence of values: `[1, 2]`
  

```

```block
.prettierrc parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × End of file expected
  
  i Use an array for a sequence of values: `[1, 2]`
  

```

```block
.prettierrc:1:1 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Incorrect type, expected an object, but received an array.
  
  > 1 │ useTabs: true
      │ ^^^^^^^^^^^^^
  

```


